--- a/myecommerce/src/main/resources/application.properties
+++ b/myecommerce/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.graphql.graphiql.enabled=true
 spring.h2.console.enabled=true
 
